--- a/res/layout/activity_write_chip.xml
+++ b/res/layout/activity_write_chip.xml
@@ -37,6 +37,7 @@
         android:layout_height="match_parent" >
  -->
         <LinearLayout
+            android:id="@+id/login_form"
             style="@style/LoginFormContainer"
             android:orientation="vertical" >
 
