--- a/res/layout/activity_tap.xml
+++ b/res/layout/activity_tap.xml
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:text="@string/tap_help" />
 
 </RelativeLayout>
