--- a/res/values/strings_activity_authenticate_user_for_tag.xml
+++ b/res/values/strings_activity_authenticate_user_for_tag.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="title_activity_write_chip">Authorize NFC Chip</string>
+    <string name="title_activity_authenticate_user_for_tag">Authorize Tag for User</string>
 
     <!-- Strings related to login -->
     <string name="action_write_chip">Sign in</string>
